# WebSocketGameServer

./: CMakeLists.txt  README.md
proto/: CMakeLists.txt  protocol.proto
src/: main.cpp
src/game/player/: i_player.hpp  player.cpp  player.hpp
src/game/tile/: i_box.hpp  tile.hpp
src/game/world/: world.cpp  world.hpp
src/net/: CMakeLists.txt
src/net/aliases/: asio_aliases.hpp
src/net/server/: server.cpp  server.hpp
src/net/session/: session.cpp  session.hpp
src/net/socket/: i_socket.hpp  send_buffer.hpp  ws_socket.cpp  ws_socket.hpp
src/shared/: CMakeLists.txt
src/shared/config/: constants.hpp
src/shared/protocol/: endianness.hpp  game_packet.cpp  game_packet.hpp  opcodes.hpp  packet_head.hpp  protocol.cpp  protocol.h  server_packet.hpp
src/shared/subsystems/: game_subsystem.hpp  network_subsystem.hpp
src/shared/utils/: ts_queue.hpp
src/tests/unit/: CMakeLists.txt
src/tests/unit/game/tile/: mock_box.hpp
src/tests/unit/shared/protocol/: game_packet_tests.cpp  packet_head_tests.cpp
src/tests/unit/shared/utils/: ts_queue_tests.cpp
